# parallel-algorithms

./: .gitignore  .gitmodules  readme.md
lab_02/quickstart/: try.py
lab_02/sieve/: main.py  run.sh
lab_03/: main.py  out.txt  run.sh
lab_04/: analyze.py  main.py  run.sh
lab_04/c/src/: main.cpp
lab_04/cxx/: CMakeLists.txt
lab_04/cxx/src/: makefile
lab_05/: analyze.py  run.sh
lab_06/: main.py
